fix font too wide in BCCAI talks

--- a/revealjssfu.scss
+++ b/revealjssfu.scss
@@ -40,12 +40,14 @@ $code-block-border-color: none !important;
 
 .reveal h1 {
   font-family: 'Anton', sans-serif !important;
+  font-weight: 300 !important;
   line-height: 5rem !important;
   color: #cc0733 !important;
 }
 
 .reveal h2 {
   font-family: 'Anton', sans-serif !important;
+  font-weight: 300 !important;
   margin-bottom: 17px !important;
   line-height: 3.5rem !important;
   color: #cc0733 !important;
@@ -53,6 +55,7 @@ $code-block-border-color: none !important;
 
 .reveal h3 {
   font-family: 'Anton', sans-serif !important;
+  font-weight: 300 !important;
   margin-top: 30px !important;
   font-size: 1.3em !important;
   color: #404040 !important;
@@ -60,15 +63,18 @@ $code-block-border-color: none !important;
 
 .reveal h4 {
   font-size: 1.2em !important;
+  font-weight: 300 !important;
   color: #4d4d4d !important;
 }
 
 .reveal h5 {
   font-size: 1.1em !important;
+  font-weight: 300 !important;
   color: #595959 !important;
 }
 
 .reveal h6 {
+  font-weight: 300 !important;
   color: #666666 !important;
 }
 
